fix #55: workarounds for bugs in custom scrollbar component (baron) in ff/win and ie+edge

--- a/app/styles/areas/_details.scss
+++ b/app/styles/areas/_details.scss
@@ -130,6 +130,13 @@
       @include flex-wrap(wrap);
       overflow-x: hidden;
       padding-top: 3px;
+
+      // workaround for bugs in custom scrollbar component (baron)
+      width: auto !important;
+      min-width: 0 !important;
+      max-width: none !important;
+      @-moz-document url-prefix() { @include scrollbar-padding-hack(); }
+      @at-root { _:-ms-lang(x), .details__body>.scroller { @include scrollbar-padding-hack(); } }
     }
 
     &-fields {
